seaqt/QtWidgets/gen_qgraphicsview.h

class QGraphicsItem;
class QGraphicsScene;
class QGraphicsView;
class QMetaObject;
class QPointF;
class QRect;
class QRectF;
class QSize;
class QTransform;
class QWidget;
typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QEvent QEvent;
typedef struct QGraphicsItem QGraphicsItem;
typedef struct QGraphicsScene QGraphicsScene;
typedef struct QGraphicsView QGraphicsView;
typedef struct QHideEvent QHideEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QPointF QPointF;
typedef struct QRect QRect;
typedef struct QRectF QRectF;
typedef struct QSize QSize;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTimerEvent QTimerEvent;
typedef struct QTransform QTransform;
typedef struct QWidget QWidget;
bool QGraphicsView_override_virtual_moveEvent(void* self, intptr_t slot);
bool QGraphicsView_override_virtual_closeEvent(void* self, intptr_t slot);
void QGraphicsView_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QGraphicsView_override_virtual_tabletEvent(void* self, intptr_t slot);
void QGraphicsView_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QGraphicsView_override_virtual_actionEvent(void* self, intptr_t slot);
void QGraphicsView_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QGraphicsView_override_virtual_hideEvent(void* self, intptr_t slot);
void QGraphicsView_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QGraphicsView_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QGraphicsView_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, intptr_t* result);
bool QGraphicsView_override_virtual_metric(void* self, intptr_t slot);
int QGraphicsView_virtualbase_metric(const void* self, int param1);
bool QGraphicsView_override_virtual_initPainter(void* self, intptr_t slot);
void QGraphicsView_virtualbase_initPainter(const void* self, QPainter* painter);
bool QGraphicsView_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QGraphicsView_virtualbase_redirected(const void* self, QPoint* offset);
bool QGraphicsView_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QGraphicsView_virtualbase_sharedPainter(const void* self);
bool QGraphicsView_override_virtual_timerEvent(void* self, intptr_t slot);
void QGraphicsView_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QGraphicsView_override_virtual_childEvent(void* self, intptr_t slot);
void QGraphicsView_virtualbase_childEvent(void* self, QChildEvent* event);
bool QGraphicsView_override_virtual_customEvent(void* self, intptr_t slot);
void QGraphicsView_virtualbase_customEvent(void* self, QEvent* event);
bool QGraphicsView_override_virtual_connectNotify(void* self, intptr_t slot);
void QGraphicsView_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QGraphicsView_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QGraphicsView_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QGraphicsView_staticMetaObject();
void QGraphicsView_delete(QGraphicsView* self);