seaqt/QtWidgets/gen_qgraphicsview.nim

proc fcQGraphicsView_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_moveEvent".}
proc fQGraphicsView_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QGraphicsView_virtualbase_closeEvent".}
proc fcQGraphicsView_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_closeEvent".}
proc fQGraphicsView_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QGraphicsView_virtualbase_tabletEvent".}
proc fcQGraphicsView_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_tabletEvent".}
proc fQGraphicsView_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QGraphicsView_virtualbase_actionEvent".}
proc fcQGraphicsView_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_actionEvent".}
proc fQGraphicsView_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QGraphicsView_virtualbase_hideEvent".}
proc fcQGraphicsView_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_hideEvent".}
proc fQGraphicsView_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr uint): bool{.importc: "QGraphicsView_virtualbase_nativeEvent".}
proc fcQGraphicsView_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_nativeEvent".}
proc fQGraphicsView_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QGraphicsView_virtualbase_metric".}
proc fcQGraphicsView_override_virtual_metric(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_metric".}
proc fQGraphicsView_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QGraphicsView_virtualbase_initPainter".}
proc fcQGraphicsView_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_initPainter".}
proc fQGraphicsView_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QGraphicsView_virtualbase_redirected".}
proc fcQGraphicsView_override_virtual_redirected(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_redirected".}
proc fQGraphicsView_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QGraphicsView_virtualbase_sharedPainter".}
proc fcQGraphicsView_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_sharedPainter".}
proc fQGraphicsView_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QGraphicsView_virtualbase_timerEvent".}
proc fcQGraphicsView_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_timerEvent".}
proc fQGraphicsView_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QGraphicsView_virtualbase_childEvent".}
proc fcQGraphicsView_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_childEvent".}
proc fQGraphicsView_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QGraphicsView_virtualbase_customEvent".}
proc fcQGraphicsView_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_customEvent".}
proc fQGraphicsView_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QGraphicsView_virtualbase_connectNotify".}
proc fcQGraphicsView_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_connectNotify".}
proc fQGraphicsView_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QGraphicsView_virtualbase_disconnectNotify".}
proc fcQGraphicsView_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_disconnectNotify".}
proc fcQGraphicsView_staticMetaObject(): pointer {.importc: "QGraphicsView_staticMetaObject".}
proc fcQGraphicsView_delete(self: pointer) {.importc: "QGraphicsView_delete".}


func init*(T: type gen_qgraphicsview_types.QGraphicsView, h: ptr cQGraphicsView): gen_qgraphicsview_types.QGraphicsView =
  T(h: h)
proc create*(T: type gen_qgraphicsview_types.QGraphicsView, parent: gen_qwidget_types.QWidget): gen_qgraphicsview_types.QGraphicsView =
  gen_qgraphicsview_types.QGraphicsView.init(fcQGraphicsView_new(parent.h))

proc create*(T: type gen_qgraphicsview_types.QGraphicsView, ): gen_qgraphicsview_types.QGraphicsView =
  gen_qgraphicsview_types.QGraphicsView.init(fcQGraphicsView_new2())

proc create*(T: type gen_qgraphicsview_types.QGraphicsView, scene: gen_qgraphicsscene_types.QGraphicsScene): gen_qgraphicsview_types.QGraphicsView =
  gen_qgraphicsview_types.QGraphicsView.init(fcQGraphicsView_new3(scene.h))

proc create*(T: type gen_qgraphicsview_types.QGraphicsView, scene: gen_qgraphicsscene_types.QGraphicsScene, parent: gen_qwidget_types.QWidget): gen_qgraphicsview_types.QGraphicsView =
  gen_qgraphicsview_types.QGraphicsView.init(fcQGraphicsView_new4(scene.h, parent.h))

proc metaObject*(self: gen_qgraphicsview_types.QGraphicsView, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQGraphicsView_metaObject(self.h))

proc metacast*(self: gen_qgraphicsview_types.QGraphicsView, param1: cstring): pointer =
  fcQGraphicsView_metacast(self.h, param1)

proc metacall*(self: gen_qgraphicsview_types.QGraphicsView, param1: cint, param2: cint, param3: pointer): cint =
  fcQGraphicsView_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qgraphicsview_types.QGraphicsView, s: cstring): string =
  let v_ms = fcQGraphicsView_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc sizeHint*(self: gen_qgraphicsview_types.QGraphicsView, ): gen_qsize_types.QSize =
  gen_qsize_types.QSize(h: fcQGraphicsView_sizeHint(self.h))

proc renderHints*(self: gen_qgraphicsview_types.QGraphicsView, ): cint =
  cint(fcQGraphicsView_renderHints(self.h))

proc setRenderHint*(self: gen_qgraphicsview_types.QGraphicsView, hint: cint): void =
  fcQGraphicsView_setRenderHint(self.h, cint(hint))

proc setRenderHints*(self: gen_qgraphicsview_types.QGraphicsView, hints: cint): void =
  fcQGraphicsView_setRenderHints(self.h, cint(hints))

proc alignment*(self: gen_qgraphicsview_types.QGraphicsView, ): cint =
  cint(fcQGraphicsView_alignment(self.h))

proc setAlignment*(self: gen_qgraphicsview_types.QGraphicsView, alignment: cint): void =
  fcQGraphicsView_setAlignment(self.h, cint(alignment))

proc transformationAnchor*(self: gen_qgraphicsview_types.QGraphicsView, ): cint =
  cint(fcQGraphicsView_transformationAnchor(self.h))

proc setTransformationAnchor*(self: gen_qgraphicsview_types.QGraphicsView, anchor: cint): void =
  fcQGraphicsView_setTransformationAnchor(self.h, cint(anchor))

proc resizeAnchor*(self: gen_qgraphicsview_types.QGraphicsView, ): cint =
  cint(fcQGraphicsView_resizeAnchor(self.h))

proc setResizeAnchor*(self: gen_qgraphicsview_types.QGraphicsView, anchor: cint): void =
  fcQGraphicsView_setResizeAnchor(self.h, cint(anchor))

proc viewportUpdateMode*(self: gen_qgraphicsview_types.QGraphicsView, ): cint =
  cint(fcQGraphicsView_viewportUpdateMode(self.h))

proc setViewportUpdateMode*(self: gen_qgraphicsview_types.QGraphicsView, mode: cint): void =
  fcQGraphicsView_setViewportUpdateMode(self.h, cint(mode))

proc optimizationFlags*(self: gen_qgraphicsview_types.QGraphicsView, ): cint =
  cint(fcQGraphicsView_optimizationFlags(self.h))

proc setOptimizationFlag*(self: gen_qgraphicsview_types.QGraphicsView, flag: cint): void =
  fcQGraphicsView_setOptimizationFlag(self.h, cint(flag))

proc setOptimizationFlags*(self: gen_qgraphicsview_types.QGraphicsView, flags: cint): void =
  fcQGraphicsView_setOptimizationFlags(self.h, cint(flags))

proc dragMode*(self: gen_qgraphicsview_types.QGraphicsView, ): cint =
  cint(fcQGraphicsView_dragMode(self.h))

proc setDragMode*(self: gen_qgraphicsview_types.QGraphicsView, mode: cint): void =
  fcQGraphicsView_setDragMode(self.h, cint(mode))

proc rubberBandSelectionMode*(self: gen_qgraphicsview_types.QGraphicsView, ): cint =
  cint(fcQGraphicsView_rubberBandSelectionMode(self.h))

proc setRubberBandSelectionMode*(self: gen_qgraphicsview_types.QGraphicsView, mode: cint): void =
  fcQGraphicsView_setRubberBandSelectionMode(self.h, cint(mode))

proc rubberBandRect*(self: gen_qgraphicsview_types.QGraphicsView, ): gen_qrect_types.QRect =
  gen_qrect_types.QRect(h: fcQGraphicsView_rubberBandRect(self.h))

proc cacheMode*(self: gen_qgraphicsview_types.QGraphicsView, ): cint =
  cint(fcQGraphicsView_cacheMode(self.h))

proc setCacheMode*(self: gen_qgraphicsview_types.QGraphicsView, mode: cint): void =
  fcQGraphicsView_setCacheMode(self.h, cint(mode))

proc resetCachedContent*(self: gen_qgraphicsview_types.QGraphicsView, ): void =
  fcQGraphicsView_resetCachedContent(self.h)

proc isInteractive*(self: gen_qgraphicsview_types.QGraphicsView, ): bool =
  fcQGraphicsView_isInteractive(self.h)

proc setInteractive*(self: gen_qgraphicsview_types.QGraphicsView, allowed: bool): void =
  fcQGraphicsView_setInteractive(self.h, allowed)

proc scene*(self: gen_qgraphicsview_types.QGraphicsView, ): gen_qgraphicsscene_types.QGraphicsScene =
  gen_qgraphicsscene_types.QGraphicsScene(h: fcQGraphicsView_scene(self.h))

proc setScene*(self: gen_qgraphicsview_types.QGraphicsView, scene: gen_qgraphicsscene_types.QGraphicsScene): void =
  fcQGraphicsView_setScene(self.h, scene.h)

proc sceneRect*(self: gen_qgraphicsview_types.QGraphicsView, ): gen_qrect_types.QRectF =
  gen_qrect_types.QRectF(h: fcQGraphicsView_sceneRect(self.h))

proc setSceneRect*(self: gen_qgraphicsview_types.QGraphicsView, rect: gen_qrect_types.QRectF): void =
  fcQGraphicsView_setSceneRect(self.h, rect.h)

proc setSceneRect*(self: gen_qgraphicsview_types.QGraphicsView, x: float64, y: float64, w: float64, h: float64): void =
  fcQGraphicsView_setSceneRect2(self.h, x, y, w, h)

proc transform*(self: gen_qgraphicsview_types.QGraphicsView, ): gen_qtransform_types.QTransform =
  gen_qtransform_types.QTransform(h: fcQGraphicsView_transform(self.h))

proc viewportTransform*(self: gen_qgraphicsview_types.QGraphicsView, ): gen_qtransform_types.QTransform =
  gen_qtransform_types.QTransform(h: fcQGraphicsView_viewportTransform(self.h))

proc isTransformed*(self: gen_qgraphicsview_types.QGraphicsView, ): bool =
  fcQGraphicsView_isTransformed(self.h)

proc setTransform*(self: gen_qgraphicsview_types.QGraphicsView, matrix: gen_qtransform_types.QTransform): void =
  fcQGraphicsView_setTransform(self.h, matrix.h)

proc resetTransform*(self: gen_qgraphicsview_types.QGraphicsView, ): void =
  fcQGraphicsView_resetTransform(self.h)

proc rotate*(self: gen_qgraphicsview_types.QGraphicsView, angle: float64): void =
  fcQGraphicsView_rotate(self.h, angle)

proc scale*(self: gen_qgraphicsview_types.QGraphicsView, sx: float64, sy: float64): void =
  fcQGraphicsView_scale(self.h, sx, sy)

proc shear*(self: gen_qgraphicsview_types.QGraphicsView, sh: float64, sv: float64): void =
  fcQGraphicsView_shear(self.h, sh, sv)

proc translate*(self: gen_qgraphicsview_types.QGraphicsView, dx: float64, dy: float64): void =
  fcQGraphicsView_translate(self.h, dx, dy)

proc centerOn*(self: gen_qgraphicsview_types.QGraphicsView, pos: gen_qpoint_types.QPointF): void =
  fcQGraphicsView_centerOn(self.h, pos.h)

proc centerOn*(self: gen_qgraphicsview_types.QGraphicsView, x: float64, y: float64): void =
  fcQGraphicsView_centerOn2(self.h, x, y)

proc centerOn*(self: gen_qgraphicsview_types.QGraphicsView, item: gen_qgraphicsitem_types.QGraphicsItem): void =
  fcQGraphicsView_centerOnWithItem(self.h, item.h)

proc ensureVisible*(self: gen_qgraphicsview_types.QGraphicsView, rect: gen_qrect_types.QRectF): void =
  fcQGraphicsView_ensureVisible(self.h, rect.h)
